--- a/site/package.json
+++ b/site/package.json
@@ -9,7 +9,7 @@
   "author": "Antonio Alvarado, Ricardo Arroyo, Santiago German Juarez",
   "license": "ISC",
   "nodemonConfig": {
-    "ignore":"src/data/*.json"
+    "ignore": "src/data/*.json"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,7 +21,9 @@
     "install": "^0.13.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.3",
+    "mysql2": "^2.3.0",
     "nodemon": "^2.0.12",
+    "sequelize": "^6.7.0",
     "to": "^0.2.9",
     "update": "^0.7.4"
   }
