--- a/site/package.json
+++ b/site/package.json
@@ -12,6 +12,7 @@
     "ignore": "src/data/*.json"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
